<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pit Scouting App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="team_number">Team Number</string>
    <string name="team_name">Team Name</string>
    <string name="title_activity_text_place">Text Place</string>
    <string name="position">Position</string>
    <string-array name="positions">
        <item>POSITION</item>
        <item>Defense</item>
        <item>Mid-Field</item>
        <item>Offense</item>
        <item >Mixed</item>
    </string-array>
    <string-array name="drive_train">
        <item >DRIVETRAIN</item>
        <item >Mechanum</item>
        <item >6 Wheel 2 Motor</item>
        <item >4 Wheel 2 Motor</item>
        <item >4 Wheel 4 Motor</item>
        <item >Holonomic</item>
        <item >Swerve</item>
        <item >Other...</item>
    </string-array>
        <string name="defensive_arm">Defensive Arm</string>
        <string name="can_shoot">Can Shoot</string>
        <string name="can_gather">Can Gather</string>
        <string name="hot_goal">Hot Goal</string>
        <string name="move_forward">Move Forward</string>
        <string name="truss_shot">Truss Shot</string>
        <string name="passing">Passing</string>
        <string name="herding">Herding</string>
        <string name="can_catch">Can Catch</string>
        <string name="driver_experience">Driver Experience</string>
        <string name="what_makes_you_special">What Makes You Special?</string>
        <string name="final_notes">Final Notes</string>
        <string name="final_rating">Final Rating</string>
        <string name="finish">Finish</string>
        <string name="seek_bar">0</string>
        <string name="rating_label">0</string>
        <string name="jeremy">Jeremy is love.  Jeremy is life</string>

</resources>
