<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TextPlace" >

    <EditText
        android:id="@+id/special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalRatingBar"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/finalRatingBar"
        android:layout_marginTop="10dp"
        android:maxLines="4"
        android:ems="10"
        android:hint="@string/what_makes_you_special"
        android:inputType="textMultiLine" />
        
    <EditText
        android:id="@+id/finalNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/special"
        android:layout_alignRight="@+id/special"
        android:layout_below="@+id/special"
        android:layout_marginTop="10dp"
        android:maxLines="4"
        android:ems="10"
        android:hint="@string/final_notes"
        android:inputType="textMultiLine" />

 
    
    <TextView
        android:id="@+id/driverXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalNotes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/driver_experience"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <SeekBar
        android:id="@+id/driverXPBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/driverXP"
        android:layout_marginTop="10dp"
        android:max="3"
        android:thumb="@drawable/sam" />

    <TextView
        android:id="@+id/driverXPLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverXPBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/seek_bar"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/finalRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverXPLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/final_rating"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/finalRatingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalRating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:max="10"
        android:thumb="@drawable/sam" />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalRatingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/rating_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="finishWrite"
        android:text="@string/finish" />

</RelativeLayout>
